Screen Sizes Changed

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:padding="25dp"
+    android:paddingLeft="22dp"
+    android:paddingRight="22dp"
+    android:paddingTop="22dp"
     android:screenReaderFocusable="true"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.CreateAccountActivity">
@@ -15,7 +17,7 @@
         android:id="@+id/createAccountCloseIV"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="67dp"
+        android:layout_marginTop="45dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/ic_x" />
 
@@ -35,14 +37,14 @@
                 android:fontFamily="@font/opensans_bold"
                 android:text="Create Account"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_24sp" />
+                android:textSize="@dimen/text_size_16sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/firstNameTIL"
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="14dp"
                 android:hint="First Name"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
@@ -59,7 +61,7 @@
                     android:inputType="text"
                     android:padding="14dp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_18sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:imeOptions="actionNext"
@@ -71,7 +73,7 @@
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="14dp"
                 android:hint="Last Name"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
@@ -88,7 +90,7 @@
                     android:maxLength="30"
                     android:padding="14dp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_18sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     android:imeOptions="actionNext" />
@@ -99,7 +101,7 @@
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="14dp"
                 android:hint="Email"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
@@ -115,7 +117,7 @@
                     android:inputType="textEmailAddress"
                     android:padding="14dp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_18sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:textColorHint="@color/light_gray"
                     android:imeOptions="actionNext"
                     android:textCursorDrawable="@drawable/cursor_color"/>
@@ -127,14 +129,14 @@
                 android:id="@+id/emailErrorLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="7dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="14dp"
+                    android:layout_height="14dp"
                     android:src="@drawable/ic_erro" />
 
                 <TextView
@@ -152,12 +154,12 @@
                 android:id="@+id/phoneNumberET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp" />
+                android:layout_marginTop="14dp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                android:layout_marginTop="21dp">
+                android:layout_marginTop="14dp">
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/TextInputLayout.OutlinedBox"
@@ -180,7 +182,7 @@
                         android:maxLength="12"
                         android:padding="14dp"
                         android:textColor="@color/text_color"
-                        android:textSize="@dimen/text_size_18sp"
+                        android:textSize="@dimen/text_size_12sp"
                         android:textColorHint="@color/light_gray"
                         android:imeOptions="actionNext"
                         android:textCursorDrawable="@drawable/cursor_color"/>
@@ -193,7 +195,7 @@
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="20dp"
                     >
 
                     <View
@@ -228,7 +230,6 @@
                 android:id="@+id/passwordInfoTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="Must be 8-12 characters, 1 uppercase, 1 number, 1 lower case, 1 special character."
                 android:textColor="@color/dark_grey"
@@ -238,7 +239,7 @@
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="14dp"
                 android:hint="Confirm Password"
                 app:expandedHintEnabled="false"
                 android:textColorHint="@color/black"
@@ -257,7 +258,7 @@
                     android:maxLength="12"
                     android:padding="14dp"
                     android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_18sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"/>
 
@@ -268,7 +269,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="14dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -277,7 +278,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="By clicking next, you agree to "
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/text_size_12sp" />
+                    android:textSize="@dimen/text_size_11sp" />
 
                 <TextView
                     android:id="@+id/tosTV"
@@ -286,7 +287,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="Terms of Service "
                     android:textColor="@color/primary_color"
-                    android:textSize="@dimen/text_size_12sp" />
+                    android:textSize="@dimen/text_size_11sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -294,7 +295,7 @@
                     android:fontFamily="@font/opensans_regular"
                     android:text="&amp; "
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/text_size_12sp" />
+                    android:textSize="@dimen/text_size_11sp" />
 
 
             </LinearLayout>
@@ -306,15 +307,15 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="Privacy Policy"
                 android:textColor="@color/primary_color"
-                android:textSize="@dimen/text_size_12sp" />
+                android:textSize="@dimen/text_size_11sp" />
 
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/nextCV"
                 android:layout_width="match_parent"
-                android:layout_height="64dp"
-                android:layout_marginTop="21dp"
-                android:layout_marginBottom="30dp"
+                android:layout_height="43dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="20dp"
                 app:cardBackgroundColor="@color/inactive_color"
                 app:cardCornerRadius="30dp">
                 <TextView
@@ -324,7 +325,7 @@
                     android:gravity="center"
                     android:text="Next"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_18sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:fontFamily="@font/opensans_bold" />
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
