--- a/app/src/main/res/layout/activity_account_type.xml
+++ b/app/src/main/res/layout/activity_account_type.xml
@@ -19,14 +19,14 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/bg_onboard_frag_one"
-            android:layout_marginTop="-300dp"
-            android:layout_marginEnd="-100dp"/>
+            android:src="@drawable/bg_account_type"
+            android:layout_marginTop="-50dp"/>
 
         <ImageView
-            android:layout_width="173dp"
-            android:layout_height="70dp"
-            android:src="@drawable/ic_coyni_logo" />
+            android:layout_width="116dp"
+            android:layout_height="47dp"
+            android:src="@drawable/ic_coyni_logo"
+            android:layout_marginTop="7dp"/>
 
 
     </LinearLayout>
@@ -34,7 +34,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="35dp"
+        android:layout_margin="24dp"
         android:layout_weight="1">
 
         <LinearLayout
@@ -47,8 +47,8 @@
             android:layout_marginEnd="10dp">
 
             <ImageView
-                android:layout_width="74dp"
-                android:layout_height="74dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/ic_case" />
 
             <TextView
@@ -58,8 +58,8 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:text="Business"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_18sp"
-                android:textStyle="bold" />
+                android:textSize="@dimen/text_size_12sp"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -73,8 +73,8 @@
             android:id="@+id/personalAccontLL">
 
             <ImageView
-                android:layout_width="74dp"
-                android:layout_height="74dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/ic_user"
                 />
 
@@ -85,8 +85,8 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:text="Personal"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/text_size_18sp"
-                android:textStyle="bold" />
+                android:textSize="@dimen/text_size_12sp"
+                />
         </LinearLayout>
 
 
