--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -12,26 +12,28 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/topIV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:scaleType="fitXY"
             android:src="@drawable/bg_onboard_three"
-            android:layout_above="@+id/fragThreeBottomLL"/>
+            android:layout_marginTop="-40dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="32dp"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/fragThreeBottomLL">
+            android:padding="21dp"
+            android:id="@+id/fragThreeBottomLL"
+            android:layout_below="@+id/topIV"
+            android:layout_marginTop="12dp"
+            android:layout_alignParentBottom="true">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Optimize Your Business With Bank-Level Functionality"
-                android:textSize="@dimen/text_size_22sp"
+                android:textSize="@dimen/text_size_15sp"
                 android:textColor="@color/primary_black"
                 android:gravity="center"
                 android:fontFamily="@font/opensans_bold"/>
@@ -53,7 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/text_size_16sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:fontFamily="@font/opensans_regular"
                     android:text="No chargebacks"/>
             </LinearLayout>
@@ -74,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/primary_black"
                     android:text="Lower fees"
-                    android:textSize="@dimen/text_size_16sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:fontFamily="@font/opensans_regular"/>
             </LinearLayout>
 
@@ -94,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/primary_black"
                     android:text="Funds available to use instantly"
-                    android:textSize="@dimen/text_size_16sp"
+                    android:textSize="@dimen/text_size_12sp"
                     android:fontFamily="@font/opensans_regular"/>
             </LinearLayout>
 
