--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,10 @@
     <color name="error">#E32B25</color>
 
 
+    <color name="vlight_gray">#E8E8E8</color>
     <color name="light_gray">#C5C5C5</color>
     <color name="dark_gray">#909090</color>
+    <color name="xdark_gray">#767676</color>
     <color name="secondary_color">#00A6A2</color>
     <color name="primary_color">#00A6A2</color>
     <color name="inactive_color">#B5E2E0</color>
