Login Expiry Password changes

--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -38,12 +38,24 @@
             android:fontFamily="@font/opensans_bold"
             android:text="Create New Password"
             android:textColor="@color/black"
-            android:textSize="24sp"></TextView>
+            android:textSize="@dimen/text_size_24sp"></TextView>
+
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvHead"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/opensans_regular"
+            android:text="@string/chpwdmsg"
+            android:textColor="@color/text_color"
+            android:textSize="@dimen/text_size_18sp"
+            android:visibility="gone"></TextView>
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/tvHead"
+            android:layout_below="@+id/tvMessage"
             android:layout_marginTop="20dp"
             android:fillViewport="true"
             android:scrollbars="none">
@@ -85,7 +97,7 @@
                             android:inputType="textPassword"
                             android:maxLength="20"
                             android:textColor="@color/text_color"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/text_size_18sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -169,7 +181,7 @@
                         android:inputType="textPassword|textMultiLine"
                         android:maxLength="20"
                         android:textColor="@color/text_color"
-                        android:textSize="18sp" />
+                        android:textSize="@dimen/text_size_18sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -189,7 +201,7 @@
                         android:fontFamily="@font/opensans_bold"
                         android:text="Save"
                         android:textColor="@color/white"
-                        android:textSize="18sp"></TextView>
+                        android:textSize="@dimen/text_size_18sp"></TextView>
                 </androidx.cardview.widget.CardView>
             </RelativeLayout>
         </ScrollView>
@@ -219,7 +231,7 @@
             android:fontFamily="@font/opensans_bold"
             android:text="All Done"
             android:textColor="@color/black"
-            android:textSize="24sp"></TextView>
+            android:textSize="@dimen/text_size_24sp"></TextView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -230,7 +242,7 @@
             android:gravity="center"
             android:text="Your password has been successfully updated."
             android:textColor="@color/text_color"
-            android:textSize="18sp"></TextView>
+            android:textSize="@dimen/text_size_18sp"></TextView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cvLogin"
@@ -248,7 +260,7 @@
                 android:fontFamily="@font/opensans_bold"
                 android:text="Log in"
                 android:textColor="@color/white"
-                android:textSize="18sp"></TextView>
+                android:textSize="@dimen/text_size_18sp"></TextView>
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
