--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -204,7 +204,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="@string/remembertxt"
                         android:textColor="@color/primary_black"
-                        android:textSize="@dimen/text_size_14sp"
+                        android:textSize="@dimen/text_size_16sp"
                         android:theme="@style/AppTheme" />
                 </LinearLayout>
 
@@ -216,22 +216,23 @@
 
                     <TextView
                         android:id="@+id/forgotpwd"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
                         android:text="@string/forgotpwdtxt"
                         android:textColor="@color/primary_green"
-                        android:textSize="13dp" />
+                        android:textSize="@dimen/text_size_18sp" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="94dp"
-                        android:layout_toRightOf="@id/forgotpwd"
+                        android:layout_weight="1"
                         android:fontFamily="@font/opensans_semibold"
+                        android:gravity="right"
                         android:text="@string/retrievemail"
                         android:textColor="@color/primary_green"
-                        android:textSize="13dp" />
+                        android:textSize="@dimen/text_size_18sp" />
                 </LinearLayout>
 
                 <androidx.cardview.widget.CardView
@@ -250,32 +251,9 @@
                         android:fontFamily="@font/opensans_bold"
                         android:text="Log in"
                         android:textColor="@color/white"
-                        android:textSize="@dimen/text_size_13sp" />
+                        android:textSize="@dimen/text_size_18sp" />
                 </androidx.cardview.widget.CardView>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/mailpassIncorrect"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="10dp"
-                        android:text="LoginFailedSheet"
-                        android:textColor="@color/black" />
-
-                    <TextView
-                        android:id="@+id/faceidNotAvaiSheet"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:padding="10dp"
-                        android:text="face id not available bottomsheet"
-                        android:textColor="@color/black" />
-                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
