--- a/app/src/main/res/layout/activity_secure_account.xml
+++ b/app/src/main/res/layout/activity_secure_account.xml
@@ -39,7 +39,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:src="@drawable/bg_secure_account"
             android:layout_gravity="bottom"/>
 
