--- a/app/src/main/res/layout/activity_enable_face_id.xml
+++ b/app/src/main/res/layout/activity_enable_face_id.xml
@@ -7,6 +7,7 @@
     tools:context=".view.EnableFaceID"
     android:padding="20dp"
     android:background="@color/white"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     >
 
     <LinearLayout
@@ -72,6 +73,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <TextView
+            android:id="@+id/faceIDNotNowTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Not Now"
