--- a/app/src/main/res/layout/activity_enable_touch_id.xml
+++ b/app/src/main/res/layout/activity_enable_touch_id.xml
@@ -7,6 +7,7 @@
     tools:context=".view.EnableTouchID"
     android:padding="20dp"
     android:background="@color/white"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     >
 
     <LinearLayout
