--- a/app/src/main/res/drawable/account_type_bg.xml
+++ b/app/src/main/res/drawable/account_type_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <stroke android:width="2dp" android:color="@color/white" />
     <corners android:radius="10dp"/>
-    <stroke android:color="@color/light_gray"
+    <stroke android:color="@color/at_gray"
         android:width="2dp"/>
     <solid android:color="@color/white"/>
 </shape>
