--- a/app/src/main/res/drawable/viewpager_un_selected_dot.xml
+++ b/app/src/main/res/drawable/viewpager_un_selected_dot.xml
@@ -11,8 +11,8 @@
             <solid android:color="@android:color/transparent"
                 />
             <stroke
-                android:color="#e0e0e0"
-                android:width="1dp"/>
+                android:color="@color/primary_green"
+                android:width="2dp"/>
         </shape>
     </item>
 </layer-list>
