--- a/app/src/main/res/layout/activity_account_type.xml
+++ b/app/src/main/res/layout/activity_account_type.xml
@@ -4,29 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".view.AccountTypeActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center"
-        android:layout_weight="1">
+        >
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/bg_account_type"
-            android:layout_marginTop="-50dp"/>
+            android:src="@drawable/bg_account_type" />
 
         <ImageView
             android:layout_width="116dp"
             android:layout_height="47dp"
             android:src="@drawable/ic_coyni_logo"
-            android:layout_marginTop="7dp"/>
+            android:layout_marginTop="7dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="43dp"/>
 
 
     </LinearLayout>
@@ -47,8 +47,8 @@
             android:layout_marginEnd="10dp">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="74dp"
+                android:layout_height="74dp"
                 android:src="@drawable/ic_case" />
 
             <TextView
@@ -73,8 +73,8 @@
             android:id="@+id/personalAccontLL">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="74dp"
+                android:layout_height="74dp"
                 android:src="@drawable/ic_user"
                 />
 
@@ -91,4 +91,5 @@
 
 
     </LinearLayout>
+
 </LinearLayout>
