--- a/app/src/main/res/layout/activity_pin_keyboard.xml
+++ b/app/src/main/res/layout/activity_pin_keyboard.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".view.PINActivity">
+    tools:context=".view.PINActivity"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <LinearLayout
         android:id="@+id/choosePINLL"
