--- a/app/src/main/res/layout/fragment_login__em_pa_incorrect__bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_login__em_pa_incorrect__bottom_sheet.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingLeft="30dp"
     android:paddingRight="30dp"
-    tools:context="com.greenbox.coyni.">
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
