--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -3,31 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    >
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <ImageView
             android:id="@+id/topIV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="-50dp"
-            android:src="@drawable/bg_onboard_frag_one" />
+            android:src="@drawable/bg_onboard_frag_one"
+            />
 
         <ImageView
             android:id="@+id/bottomIV"
-            android:layout_width="116dp"
+            android:layout_width="match_parent"
             android:layout_height="46dp"
-            android:src="@drawable/ic_coyni_logo"
-            android:layout_marginBottom="60dp"
+            android:layout_below="@id/topIV"
             android:layout_gravity="center"
             android:layout_marginTop="7dp"
-            />
-    </LinearLayout>
+            android:layout_marginBottom="60dp"
+            android:src="@drawable/ic_coyni_logo" />
+    </RelativeLayout>
 
 </FrameLayout>
