--- a/app/src/main/res/layout/outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/outlinebox_phone_number_layout.xml
@@ -25,8 +25,8 @@
             android:layout_marginStart="15dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/ic_us"/>
             <TextView
                 android:layout_width="wrap_content"
